@@ -35,20 +35,21 @@ tzxlist \- Sinclair ZX Spectrum "real" tape file lister
 .SH SYNOPSIS
 .PD 0
 .B tzxlist
-.IR "tzxfile" ...
+.IR "tapefile" ...
 .P
 .PD 1
 .\"
 .\"------------------------------------------------------------------
 .\"
 .SH DESCRIPTION
-Tzxlist outputs a description of the contents of TZX tape files.
+Tzxlist outputs a description of the contents of TZX, TAP and Warajevo
+TAP tape files.
 .\"
 .\"------------------------------------------------------------------
 .\"
 .SH OPTIONS
 .TP
-.I tzxfile
+.I tapefile
 specifies a tape file whose contents are to be listed.
 .\"
 .\"------------------------------------------------------------------
